Moved games/edutainment to test/education.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-02-21 Dale E. Edmons <linuxfan@sourcemage.org>
+	* education/: Created new section to replace games/edutainment
+	* education/gtypist: Copied from games/edutainment.
+	* education/tuxmath: Copied from games/edutainment.
+	* education/tuxpaint: Copied from games/edutainment.
+	* education/tuxtype: Copied from games/edutainment.
+	* wm-addons/xpenguins: games/edutainment was a duplicate.
+	* wm-addons/xpenguins-applet: games/edutainment was a duplicate.
+	* wm-addons/xpenguins_themes: games/edutainment was a duplicate.
+
 2008-02-20 Julien "_kaze_" ROZO <julien@rozo.org>
 	* kde-apps/lineak_kdeplugins: moved from x11-libs
 
