--- a/audio-libs/taglib/HISTORY
+++ b/audio-libs/taglib/HISTORY
@@ -1,3 +1,6 @@
+2008-02-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.5
+
 2008-02-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.5rc1
 
