--- a/video/ffmpeg-svn/HISTORY
+++ b/video/ffmpeg-svn/HISTORY
@@ -1,3 +1,7 @@
+2008-02-21 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* 300_c++_compliant_headers.diff, PRE_BUILD: removed patch, replaced
+	  by a rather ugly sedit that hopefully breaks less
+
 2008-02-18 Ethan Grammatikidis <eekee57@fastmail.fm>
 	* 300_c++_compliant_headers.diff: regenerated for todays svn.
 	  May I note that I think maintaining a patch against an scm-based
