--- a/python-pypi/django/HISTORY
+++ b/python-pypi/django/HISTORY
@@ -1,3 +1,6 @@
+2008-02-21 Pol Vinogradov <vin.public@gmail.com>
+	* DEPENDS: added subversion for SVN version
+
 2008-01-06 Alexander Tsamutali <astsmtl@gmail.com>
 	* PREPARE, DETAILS: Added option to install SVN version
 
