kde4-profile: Optionally depend on kdebase4, kdeedu4, kdegames4, kdesdk4, and kdetoys4

--- a/kde4/kde4-profile/HISTORY
+++ b/kde4/kde4-profile/HISTORY
@@ -1,3 +1,7 @@
+2008-02-21 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Optionally depend on kdebase4, kdeedu4, kdegames4, kdesdk4, and
+	  kdetoys4
+
 2008-02-15  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.1
 
