--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-22 Julien "_kaze_" ROZO <julien@rozo.org>
+	* kde-apps/ksniffer: new spell, a sniffing application for KDE
+
 2008-02-21 Dale E. Edmons <linuxfan@sourcemage.org>
 	* education/: Created new section to replace games/edutainment
 	* education/gtypist: Copied from games/edutainment.
