--- a/kde4/kdeutils4/HISTORY
+++ b/kde4/kdeutils4/HISTORY
@@ -1,3 +1,6 @@
+2008-02-21  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.63
+
 2008-02-15  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.62
 
