--- a/kde4/kdeedu4/HISTORY
+++ b/kde4/kdeedu4/HISTORY
@@ -1,3 +1,6 @@
+2008-02-21  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.63
+
 2008-02-12  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.1
 	  add stable/unstable versions; currently(4.0.1/4.0.61)
