--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-22  Treeve Jelbert <treeve@sourcemage.org>
+	* kde4/kdevplatform4: new spell
+
 2008-02-22 Julien "_kaze_" ROZO <julien@rozo.org>
 	* kde-apps/ksniffer: new spell, a sniffing application for KDE
 
