--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,6 @@
+2008-02-22 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 6.3.8-11
+
 2008-02-17 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated version to 6.3.8-8
 
