--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2008-02-22 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: updated spell to 0.9.56
+
 2008-02-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.55
 
