python: fixed the installation

--- a/devel/python/INSTALL
+++ b/devel/python/INSTALL
@@ -1,7 +1,7 @@
 cp -av $SOURCE_DIRECTORY/anywhere/usr $INSTALL_ROOT/ &&
 
 if [[ -f $SOURCE_DIRECTORY/spell-tmp/pydcop.py ]]; then
-  mv $SOURCE_DIRECTORY/spell-tmp/pydcop.py $PYPATH
+  cp $SOURCE_DIRECTORY/spell-tmp/pydcop.py $PYPATH
 fi &&
 
 # gettext
