--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,6 @@
+2008-02-22 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* INSTALL: changed mv to cp, so python casts with staging
+
 2008-01-18 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD, CONFIGURE: ipv6 and threads => configurable
 
