--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,6 @@
+2008-02-23 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 2.5.2
+
 2008-02-22 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* INSTALL: changed mv to cp, so python casts with staging
 
