--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-23 Dale E. Edmons <linuxfan@sourcemage.org>
+	* utils/open-vm-tools: New spell.  WIP, but casts.  Feel free to modify.
+
 2008-02-22 Julien "_kaze_" ROZO <julien@rozo.org>
 	* kde-apps/ksniffer: new spell, a sniffing application for KDE
 
