--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-23 Eric Sandall <sandalle@sourcemage.org>
+	* utils/b43-fwcutter: Added firmware extraction for b43legacy
+
 2008-02-23 Dale E. Edmons <linuxfan@sourcemage.org>
 	* utils/open-vm-tools: New spell.  WIP, but casts.  Feel free to modify.
 
