fwcutter: Rename to bcm43xx-fwcutter

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2008-02-23 Eric Sandall <sandalle@sourcemage.org>
 	* utils/b43-fwcutter: Added firmware extraction for b43legacy
+	* utils/fwcutter: Rename to bcm43xx-fwcutter
 
 2008-02-23 Dale E. Edmons <linuxfan@sourcemage.org>
 	* utils/open-vm-tools: New spell.  WIP, but casts.  Feel free to modify.
