--- a/printer/glabels/HISTORY
+++ b/printer/glabels/HISTORY
@@ -1,3 +1,6 @@
+2008-02-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.2.2
+
 2008-01-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.2.1
 
