--- a/chat-im/psi/HISTORY
+++ b/chat-im/psi/HISTORY
@@ -1,3 +1,6 @@
+2008-02-23 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated devel to version 0.12-RC1
+
 2007-11-04 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 0.11
 	* DEPENDS: Adjusted for 0.11 using old devel depends
