--- a/x11-toolkits/qt4/HISTORY
+++ b/x11-toolkits/qt4/HISTORY
@@ -1,3 +1,6 @@
+2008-02-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: add    SOURCE_IGNORE for snapshot
+
 2008-01-23 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* REPAIR^all^PRE_SUB_DEPENDS: this is the repair file that matters
 
