--- a/graphics/freewrl/HISTORY
+++ b/graphics/freewrl/HISTORY
@@ -1,3 +1,7 @@
+2008-02-23 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: updated FREEWRL_DEVEL=n to 1.20.1
+	  updated FREEWRL_DEVEL=y to 1.20.1
+
 2007-09-30 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DEPENDS: depend on X11-SERVER and additionally on xterm if using
 	  -modular
