--- a/video/ksubtile/HISTORY
+++ b/video/ksubtile/HISTORY
@@ -1,3 +1,7 @@
+2008-02-23 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* BUILD: added for the new kde3 bs
+	* PRE_BUILD: added to fix #14293
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
