--- a/video/ksubtile/HISTORY
+++ b/video/ksubtile/HISTORY
@@ -1,4 +1,6 @@
 2008-02-23 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 1.3
 	* BUILD: added for the new kde3 bs
 	* PRE_BUILD: added to fix #14293
 
