--- a/libs/libsigc++3/HISTORY
+++ b/libs/libsigc++3/HISTORY
@@ -1,3 +1,8 @@
+2008-02-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.0
+	* BUILD: useless, multimake is ok now
+	* DEPENDS: cleaned up the spaces
+
 2007-12-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[1]
 	  updated spell to 2.0.18
