--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2008-02-24 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 1.5.4.3
+
 2008-02-17 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.5.4.2
 
