--- a/http/kazehakase/HISTORY
+++ b/http/kazehakase/HISTORY
@@ -1,3 +1,6 @@
+2008-02-24 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 0.5.2. Updated SOURCE_URL.
+
 2008-01-13 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: Fixed SOURCE_URL[0]
 	  updated spell to 0.5.1
