--- a/kernels/madwifi/HISTORY
+++ b/kernels/madwifi/HISTORY
@@ -1,3 +1,6 @@
+2008-02-23 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.9.4
+
 2007-12-04 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version bumped to 0.9.3.3, security update
 
