--- a/http/midori/HISTORY
+++ b/http/midori/HISTORY
@@ -1,3 +1,8 @@
+2008-02-24 George Sherwood <george@beernabeer.com>
+	* DETAILS: Added git version
+	* PREPARE: Add query's for git version
+	* BUILD: Need to run autogen.sh for git version
+
 2008-02-06 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD: fixed the check against new WebKitGtk version
 
