--- a/gnome2-libs/librsvg2/HISTORY
+++ b/gnome2-libs/librsvg2/HISTORY
@@ -1,3 +1,6 @@
+2008-02-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.22.0
+
 2008-01-20 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.0
 
@@ -211,4 +214,3 @@
 
 2002-05-17 Jon Svendsen <jon-sven@frisurf.no>
 	* Initial version of spell
-
