--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,6 @@
+2008-02-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to r30549
+
 2008-02-24 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version r30468
 
