liferea: Updated webkit.c closer to trunk

--- a/news/liferea/HISTORY
+++ b/news/liferea/HISTORY
@@ -1,3 +1,7 @@
+2008-02-24 George Sherwood <george@beernabeer.com>
+	* webkit.c: Updated closer to current liferea trunk. Trunk still
+	  requires fix for location of webkit.h
+
 2008-02-10 George Sherwood <george@beernabeer.com>
 	* PRE_BUILD: Added patch.
 	* webkitgtk.patch: Added to fix problem with new *.pc file.
