--- a/audio-drivers/jackdmp/HISTORY
+++ b/audio-drivers/jackdmp/HISTORY
@@ -1,3 +1,13 @@
+2008-02-24 Juuso Alasuutari <iuso@sourcemage.org>
+	* DETAILS: Updated stable version to 0.70.
+	* jack.pc: Changed corresponding jackd version to 0.109.0
+	* DETAILS, PRE_BUILD: Changed source dir handling to better account
+	  for the source being a zip archive with more than one directory.
+	* PREPARE, PRE_BUILD, BUILD: Removed the persistent _SRCDIR var
+	  and replaced it with local vars for each file. (_SRCDIR was used
+	  to account for packaging differences between the stable and devel
+	  version.)
+
 2007-12-02 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Added VCS version option.
 	* PREPARE: Added, query about VCS version.
