--- a/audio-drivers/jack/HISTORY
+++ b/audio-drivers/jack/HISTORY
@@ -1,3 +1,6 @@
+2008-02-24 Juuso Alasuutari <iuso@sourcemage.org>
+	* DETAILS: Updated to 0.109.2.
+
 2008-01-22 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Updated to 0.109.0.
 	* DEPENDS: Enabled optional_depends libcap only for 2.4. kernels,
