fcron: fixed multijob bug on smp

--- a/utils/fcron/HISTORY
+++ b/utils/fcron/HISTORY
@@ -1,3 +1,6 @@
+2008-02-24 Vlad Glagolev <stealth@sourcemage.org>
+	* INSTALL: fixed a bug with multijobs on the SMP machines
+
 2007-11-14 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* BUILD: fixes for paths
 	* init.d/fcron: run in runlevel 3
