--- a/python-pypi/kaa-base/HISTORY
+++ b/python-pypi/kaa-base/HISTORY
@@ -1,3 +1,6 @@
+2008-02-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.3.0
+
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS, DETAILS: cleaned up, fixed url
 
