--- a/video/freevo/HISTORY
+++ b/video/freevo/HISTORY
@@ -1,3 +1,6 @@
+2008-02-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.6.1
+
 2007-12-222 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.5
 	* DEPENDS: remove pysqlite, now part of python
