--- a/disk/cdrkit/HISTORY
+++ b/disk/cdrkit/HISTORY
@@ -1,3 +1,7 @@
+2008-02-24 Ethan Grammatikidis <eekee57@fastmail.fm>
+	* PROVIDES: Added READCD as xfburn requires this feature rather
+	  than a generic CD-BURN-UTILITY.
+
 2007-12-02 Ismael Luceno <ismael@sourcemage.org>
 	* INSTALL, CONFIGURE: add more cdrecord compatibility symlinks
 
