--- a/mail/claws-mail/HISTORY
+++ b/mail/claws-mail/HISTORY
@@ -1,3 +1,6 @@
+2008-02-25 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.3.1
+
 2008-02-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.3.0
 	* DEPENDS: removed optional_depends clamav
