--- a/mail/claws-mail-extra-plugins/HISTORY
+++ b/mail/claws-mail-extra-plugins/HISTORY
@@ -1,3 +1,7 @@
+2008-02-25 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.3.1
+	* CONFIGURE, DEPENDS: removed clamav plugin (licensing problems)
+
 2008-02-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.3.0
 	* CONFIGURE: added new clamav plugin
