liferea: Updated to version 1.4.13. Updated webkit.c with fixes for small font size from upstream.  Removed incorporated webkitgtk.patch.

--- a/news/liferea/HISTORY
+++ b/news/liferea/HISTORY
@@ -1,3 +1,9 @@
+2008-02-25 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 1.4.13
+	* PRE_BUILD: Removed webkitgtk.patch.
+	* webkit.c: Updated with fixes for font size
+	* webkitgtk.patch: Removed. Integrated Upstream.
+	
 2008-02-24 George Sherwood <george@beernabeer.com>
 	* webkit.c: Updated closer to current liferea trunk. Trunk still
 	  requires fix for location of webkit.h
