--- a/kde4/kde4-profile/HISTORY
+++ b/kde4/kde4-profile/HISTORY
@@ -1,3 +1,6 @@
+2008-02-24 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Allow for stable and unstable versions
+
 2008-02-21 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Optionally depend on kdebase4, kdeedu4, kdegames4, kdesdk4, and
 	  kdetoys4
