sylpheed: => 1.0.6 (1.x branch), added icon

--- a/mail/sylpheed/HISTORY
+++ b/mail/sylpheed/HISTORY
@@ -1,3 +1,7 @@
+2008-02-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated 1.0 branch to 1.0.6
+	* INSTALL: added installation of a 48x48 png icon
+
 2007-12-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[1]
 	  updated SYLPHEED_GTK2=y to 2.4.8
