gbdfed: added icon

--- a/graphics/gbdfed/HISTORY
+++ b/graphics/gbdfed/HISTORY
@@ -1,3 +1,6 @@
+2008-02-25 Vlad Glagolev <stealth@sourcemage.org>
+	* INSTALL: added 48x48 png icon
+
 2008-01-05 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: fixed version in the sources
 
