--- a/video/mplayer/HISTORY
+++ b/video/mplayer/HISTORY
@@ -1,3 +1,6 @@
+2008-02-25 Vlad Glagolev <stealth@sourcemage.org>
+	* INSTALL: added png icon
+
 2008-01-17 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DEPENDS: brought back --disable-xss, moved the whole dependency to
 	  mplayer svn
