--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,6 @@
+2008-02-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: added optional depends jack and pulseaudio
+
 2008-02-06 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.13.1
 
