--- a/video/kino/HISTORY
+++ b/video/kino/HISTORY
@@ -1,3 +1,6 @@
+2008-02-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.0
+
 2007-12-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.0
 	* PRE_BUILD, ffmpeg-api.patch: deleted, no longer needed
