--- a/kde-core/kdebase/HISTORY
+++ b/kde-core/kdebase/HISTORY
@@ -1,3 +1,6 @@
+2008-02-25 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: updated spell to 3.5.9
+
 2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: removed is_depends_enabled.function reference
 
