--- a/disk/ddrescue/HISTORY
+++ b/disk/ddrescue/HISTORY
@@ -1,3 +1,6 @@
+2008-02-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6
+
 2008-01-07 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7
 
