bluez-utils: updated version to 3.27

--- a/utils/bluez-utils/HISTORY
+++ b/utils/bluez-utils/HISTORY
@@ -1,6 +1,9 @@
+2008-02-25 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 3.27
+
 2008-02-11 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 3.26
-	
+
 2008-05-06 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 3.25
 
