bluez-gnome: updated version to 0.23

--- a/gnome2-apps/bluez-gnome/HISTORY
+++ b/gnome2-apps/bluez-gnome/HISTORY
@@ -1,3 +1,6 @@
+2008-02-25 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 0.23
+
 2008-02-12 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 0.20
 	* DEPENDS: added gconf2 and libnotify
