--- a/kde-core/kdeadmin/HISTORY
+++ b/kde-core/kdeadmin/HISTORY
@@ -1,3 +1,6 @@
+2008-02-25 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: updated spell to 3.5.9
+
 2007-12-15  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: remove kdebase, kdelibs is enough
 
