--- a/kde-core/arts/HISTORY
+++ b/kde-core/arts/HISTORY
@@ -1,3 +1,7 @@
+2008-02-25 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 1.5.9
+
 2007-12-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* BUILD: deleted
