alsa-driver: POST_REMOVE: always succeed #14280

--- a/audio-drivers/alsa-driver/HISTORY
+++ b/audio-drivers/alsa-driver/HISTORY
@@ -1,3 +1,6 @@
+2008-02-25 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* POST_REMOVE: always succeed #14280
+
 2008-02-08 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 1.0.16
 
