--- a/editors/zim/HISTORY
+++ b/editors/zim/HISTORY
@@ -1,3 +1,6 @@
+2006-11-29 Jose Iria <jose.iria@gmail.com>
+	* DETAILS: updated to 0.23
+
 2006-11-29 Pieter Lenaerts <e-type@sourcemage.org>
 	* DETAILS: updated to 0.17
 
