--- a/editors/zim/HISTORY
+++ b/editors/zim/HISTORY
@@ -1,3 +1,6 @@
+2008-02-25 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: added a missing &&
+
 2006-11-29 Jose Iria <jose.iria@gmail.com>
 	* DETAILS: updated to 0.23
 
