--- a/gnome2-libs/orbit2/HISTORY
+++ b/gnome2-libs/orbit2/HISTORY
@@ -1,3 +1,7 @@
+2008-02-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.14.12
+	* DEPENDS: removed useless dep
+
 2008-01-25 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.14.11
 
