--- a/perl-cpan/file-chdir/HISTORY
+++ b/perl-cpan/file-chdir/HISTORY
@@ -1,3 +1,9 @@
+2008-02-25 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  fixed long description wrap
+	  fixed WEB_SITE
+	  updated spell to 0.1002
+
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD: useless
 
