--- a/audio-players/last.fm/HISTORY
+++ b/audio-players/last.fm/HISTORY
@@ -1,3 +1,9 @@
+2008-01-30 Jose Iria <jose.iria@gmail.com>
+	* last.fm: invoking last.fm.sh instead of last.fm
+	* DETAILS: updated version, source_url
+	* DEPENDS: updated dependencies
+	* BUILD: removed -ffast-math in internal portAudio Makefile, causes gcc to crash
+
 2007-04-09 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* INSTALL: made the install location more standard
 	* last.fm: accompanying change, silencing and TRACK_ROOT
