--- a/x11-toolkits/qt4/HISTORY
+++ b/x11-toolkits/qt4/HISTORY
@@ -1,5 +1,6 @@
 2008-02-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.4.0-beta1 (prerelease)
+	* DETAILS: version 4.3.4 (stable)
 
 2008-02-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: add    SOURCE_IGNORE for snapshot
