--- a/audio-libs/slv2/HISTORY
+++ b/audio-libs/slv2/HISTORY
@@ -1,3 +1,6 @@
+2008-02-25 Juuso Alasuutari <iuso@sourcemage.org>
+	* DETAILS: Updated to 0.5.0.
+
 2008-01-16 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Updated to 0.4.4.
 
