swh-lv2: New spell, an LV2 port of the swh-plugins LADSPA plugin set.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-26 Juuso Alasuutari <iuso@sourcemage.org>
+	* audio-plugins/swh-lv2: New spell, an LV2 port of swh-plugins.
+
 2008-02-23 Eric Sandall <sandalle@sourcemage.org>
 	* utils/b43-fwcutter: Added firmware extraction for b43legacy
 	* utils/fwcutter: Rename to bcm43xx-fwcutter
