--- a/devel/mono/HISTORY
+++ b/devel/mono/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Eric Sandall <sandalle@sourcemage.org>
+	* BUILD: --with-tls=__thread breaks x86_64, use --with-tls=pthread
+
 2007-12-23 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.2.6
 	* BUILD: Needs to specify --with-tls=pthreads for x86
