--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,4 +1,5 @@
 2008-02-26 Eric Sandall <sandalle@sourcemage.org>
+	* info/patches/maintenance_patches/patch-2.6.23.17: Added
 	* info/patches/maintenance_patches/patch-2.6.22.19: Added
 	  Security fix for CVE-2007-3731 and CVE-2007-3731
 
