* info/patches/maintenance_patches/patch-2.6.24.3: Added * latest.defaults: Latest maintenance_patch is 2.6.24.3

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,4 +1,6 @@
 2008-02-26 Eric Sandall <sandalle@sourcemage.org>
+	* info/patches/maintenance_patches/patch-2.6.24.3: Added
+	* latest.defaults: Latest maintenance_patch is 2.6.24.3
 	* info/patches/PRE_2_6/patch-2.6.25-rc3: Added
 	* latest.defaults: Latest PRE_2_6 is 2.6.25-rc3
 	* info/patches/maintenance_patches/patch-2.6.23.17: Added
