--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2008-02-26 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: updated latest to patch-2.6.24.3
+	* info/patches/maintenance_patches/patch-2.6.24.3: added
+
 2008-02-11 Vlad Glagolev <stealth@sourcemage.org>
 	* latest.defaults: updated to 2.6.24.2
 	* info/patches/maintenance_patches/patch-2.6.24.2: added
