kdegraphics: updated version to 3.5.9, removed PRE_BUILD and post-3.5.8-kdegraphics-kpdf.diff.bz2

--- a/kde-core/kdegraphics/HISTORY
+++ b/kde-core/kdegraphics/HISTORY
@@ -1,3 +1,7 @@
+2008-02-26 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 3.5.9
+	* PRE_BUILD, post-3.5.8-kdegraphics-kpdf.diff.bz2: deleted
+
 2007-11-08  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: SECURITY_PATCH++
 	* PRE_BUILD, post-3.5.8-kdegraphics-kpdf.diff.bz2: added
