--- a/kde-core/kdepim/HISTORY
+++ b/kde-core/kdepim/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 3.5.9
+
 2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: removed is_depends_enabled.function reference
 
