--- a/utils/linux_logo/HISTORY
+++ b/utils/linux_logo/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 5.03
+
 2007-11-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 5.02, removed UPDATED
 	* BUILD: updated
