--- a/xorg-app/compiz/HISTORY
+++ b/xorg-app/compiz/HISTORY
@@ -1,3 +1,8 @@
+2008-02-26 Andraž ruskie Levstik <ruskie@mages.ath.cx>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  fixed WEB_SITE
+	  updated spell to 0.7.0
+
 2007-12-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 0.6.2
 
