--- a/video-libs/gst-plugins-base/HISTORY
+++ b/video-libs/gst-plugins-base/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* DETAILS: updated to 0.10.17
+
 2007-11-16 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.10.15
 
