sdl_mixer: added PRE_SUB_DEPENDS and SUB_DEPENDS, as extremetuxracer needs sdl_mixer with libmikmod support

--- a/libs/sdl_mixer/HISTORY
+++ b/libs/sdl_mixer/HISTORY
@@ -1,3 +1,7 @@
+2008-02-26 Julien "_kaze_" ROZO <julien@rozo.org>
+	* PRE_SUB_DEPENDS, SUB_DEPENDS: extremetuxracer needs sdl_mixer with
+	  libmikmod support
+
 2008-01-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.2.8
 
