--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DEPENDS: changed msttf to MSTTF
+
 2008-02-22 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: updated spell to 0.9.56
 
