--- a/gnome2-libs/glib2/HISTORY
+++ b/gnome2-libs/glib2/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.15.6
+
 2008-02-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.14.6
 
