--- a/gnome2-libs/at-spi/HISTORY
+++ b/gnome2-libs/at-spi/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.21.92
+
 2007-10-16 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.20.1
 
