gail: updated to 1.21.5

--- a/gnome2-libs/gail/HISTORY
+++ b/gnome2-libs/gail/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.21.5
+
 2007-11-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.20.2
 
