--- a/utils/bluez-utils/HISTORY
+++ b/utils/bluez-utils/HISTORY
@@ -1,10 +1,13 @@
+2008-02-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: dbus-glib, pygtk2 are useless, dbus is strictly required now
+
 2008-02-25 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 3.27
 
 2008-02-11 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 3.26
 
-2008-05-06 Julien "_kaze_" ROZO <julien@rozo.org>
+2008-02-06 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 3.25
 
 2008-01-06 Julien "_kaze_" ROZO <julien@rozo.org>
@@ -98,4 +101,3 @@
 
 2002-12-15 Jose Bernardo Silva <jbernardo@sourcemage.org>
 	* Initial version
-
