--- a/gnome2-libs/libbonoboui/HISTORY
+++ b/gnome2-libs/libbonoboui/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.90
+
 2007-09-19 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.0
 
