--- a/gnome2-libs/libgnomeui/HISTORY
+++ b/gnome2-libs/libgnomeui/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.92
+
 2008-01-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: remove esound, no longer needed
 
