--- a/gnome2-libs/evolution-data-server/HISTORY
+++ b/gnome2-libs/evolution-data-server/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.92
+
 2008-01-17 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on gtk-doc, this is not optional. :(
 
