--- a/gnome2-libs/gnome-doc-utils/HISTORY
+++ b/gnome2-libs/gnome-doc-utils/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 0.12.1
+
 2007-09-20 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.12.0
 	* DEPENDS: changed scrollkeeper to rarian
