--- a/gnome2-libs/gnome-menus/HISTORY
+++ b/gnome2-libs/gnome-menus/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.92
+
 2008-01-13 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.3
 
