libgweather: new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-26 Robin Cook <rcook@wyrms.net>
+	* New Spell: gnome2-libs/libgweather
+
 2008-02-26 Juuso Alasuutari <iuso@sourcemage.org>
 	* audio-plugins/swh-lv2: New spell, an LV2 port of swh-plugins.
 
