--- a/gnome2-libs/gnome-panel/HISTORY
+++ b/gnome2-libs/gnome-panel/HISTORY
@@ -1,3 +1,7 @@
+2008-02-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.92
+	* DEPENDS: added libgweather
+
 2008-01-13 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.3
 
