doc/funny-manpages: new spell, more funny manpages

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-26 Ladislav Hagara <hgr@vabo.cz>
+	* doc/funny-manpages: new spell, more funny manpages
+
 2008-02-26 Juuso Alasuutari <iuso@sourcemage.org>
 	* audio-plugins/swh-lv2: New spell, an LV2 port of swh-plugins.
 
