screenlets: Screen applets

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-26 Eric Sandall <sandalle@sourcemage.org>
+	* x11/screenlets: Added Screen applets
+
 2008-02-26 Ladislav Hagara <hgr@vabo.cz>
 	* doc/funny-manpages: new spell, more funny manpages
 
