--- a/gnome2-libs/gnome-icon-theme/HISTORY
+++ b/gnome2-libs/gnome-icon-theme/HISTORY
@@ -1,3 +1,6 @@
+2008-02-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.92
+
 2007-09-20 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.0
 
