--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2008-02-26 Eric Sandall <sandalle@sourcemage.org>
 	* x11/screenlets: Added Screen applets
-	* e/itask: Added an E17 full featured tasbkar
+	* e/e_module-itask: Added an E17 full featured tasbkar
 	* e/e_module-winlist-ng: Added an E17 window list module
 
 2008-02-26 Ladislav Hagara <hgr@vabo.cz>
