e_modules: Added optional dependencies on e_module-itask and e_module-winlist-ng

--- a/e/e_modules/HISTORY
+++ b/e/e_modules/HISTORY
@@ -1,3 +1,7 @@
+2008-02-26 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Added optional dependencies on e_module-itask and
+	  e_module-winlist-ng
+
 2008-01-23 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Added optional dependency on e_module-execwatch
 
