thunderbird: updated version to 2.0.0.12, SECURITY_PATCH=11

--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 2.0.0.12, SECURITY_PATCH=11
+
 2008-02-12 Eric Sandall <sandalle@sourcemage.org>
 	* INSTALL: Apply enigmail.patch if Enigmail is enabled
 	* enigmail.patch: Patch for Engimail to be registered (Bug #10720)
