--- a/ftp/transmission/HISTORY
+++ b/ftp/transmission/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.06
+
 2008-02-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.05
 
