kdegraphics: added missing dependencies for ksvg #14060

--- a/kde-core/kdegraphics/HISTORY
+++ b/kde-core/kdegraphics/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* CONFIGURE, DEPENDS: added missing dependencies for ksvg #14060
+
 2008-02-26 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 3.5.9
 	* PRE_BUILD, post-3.5.8-kdegraphics-kpdf.diff.bz2: deleted
