--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-27 Julien "_kaze_" ROZO <julien@rozo.org>
+	* kde-apps/komparator: new spell, a KDE app to synchronize two
+	  directories 
+
 2008-02-26 Eric Sandall <sandalle@sourcemage.org>
 	* x11/screenlets: Added Screen applets
 	* e/e_module-itask: Added an E17 full featured tasbkar
