--- a/telephony/telepathy-glib/HISTORY
+++ b/telephony/telepathy-glib/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7.3
+
 2008-02-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7.2
 
