ffmpeg-svn: fixed install location of header files

--- a/video/ffmpeg-svn/HISTORY
+++ b/video/ffmpeg-svn/HISTORY
@@ -1,3 +1,7 @@
+2008-02-27 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* BUILD: fixed location for installed headers back to
+	  /usr/include/ffmpeg
+
 2008-02-21 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* 300_c++_compliant_headers.diff, PRE_BUILD: removed patch, replaced
 	  by a rather ugly sedit that hopefully breaks less
