--- a/gnome2-libs/libgnomeprintui/HISTORY
+++ b/gnome2-libs/libgnomeprintui/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.18.2
+
 2007-11-11 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: fixed libgnomeui dep, it's not
 	  strictly required
