--- a/gnome2-libs/libgtop2/HISTORY
+++ b/gnome2-libs/libgtop2/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.92
+
 2008-01-13 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.1
 
