--- a/gnome2-libs/gnome-system-monitor/HISTORY
+++ b/gnome2-libs/gnome-system-monitor/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.92
+
 2008-01-20 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* CONFLICTS: removed, gtop is gone
 
