almost forgot Changelog for lxp*

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-28 Arjan Bouter <abouter@sourcemage.org>
+	* windowmanagers/lxp, windowmanagers/lxp-icewm: new spells,
+	  LookXP windowmanager.
+	* wm-addons/lxp-icewm-themes: new spell, LookXP themes
+
 2008-02-27 Julien "_kaze_" ROZO <julien@rozo.org>
 	* kde-apps/komparator: new spell, a KDE app to synchronize two
 	  directories 
