e-emotion: made xine-lib optional

--- a/e/e-emotion/HISTORY
+++ b/e/e-emotion/HISTORY
@@ -1,3 +1,7 @@
+2008-02-27 Arjan Bouter <abouter@sourcemage.org>
+	* DEPENDS: made xine-libs optional
+	* DETAILS: removed updated and set patchlevel=1
+
 2007-09-22 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Optionally depends on gst-ffmpeg for a backend
 	  Optionally depends on gst-plugins-good (built with libcdio) for CDDA
