--- a/http/gnash/HISTORY
+++ b/http/gnash/HISTORY
@@ -1,3 +1,7 @@
+2008-02-28 Eric Sandall <sandalle@sourcemage.org>
+	* CONFIGURE: Don't modify GNASH_SOUND outside of the config_query_list
+	  Fixes Bug #14338
+
 2008-01-02 Pol Vinogradov <vin.public@gmail.com>
 	* INSTALL: switched to icecat{,-bin}
 
@@ -61,3 +65,4 @@
 
 2007-03-08 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS,DEPENDS,PREPARE,BUILD,HISTORY: created spell
+
