--- a/gnome2-libs/gtkhtml2/HISTORY
+++ b/gnome2-libs/gtkhtml2/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 3.17.92
+
 2008-01-13 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 3.16.3
 
