--- a/gnome2-libs/pygtksourceview/HISTORY
+++ b/gnome2-libs/pygtksourceview/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.1.1
+
 2007-12-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: cleaned up, PATCHLEVEL++
 	* DEPENDS: fixed build, optional docbook-xsl when building the docs
