e: Properly (according to E17 devs) install E17 modules using enlightenment-config, not building with --prefix (the latter breaks modules from being freely relocatable)

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 	  LookXP windowmanager.
 	* wm-addons/lxp-icewm-themes: new spell, LookXP themes
 
+2008-02-27 Eric Sandall <sandalle@sourcemage.org>
+	* e/FUNCTIONS: Added default_build_e17_module for E17 modules
+
 2008-02-27 Julien "_kaze_" ROZO <julien@rozo.org>
 	* kde-apps/komparator: new spell, a KDE app to synchronize two
 	  directories 
