--- a/e/e_module-alarm/HISTORY
+++ b/e/e_module-alarm/HISTORY
@@ -1,3 +1,7 @@
+2008-02-27 Eric Sandall <sandalle@sourcemage.org>
+	* BUILD: E17 modules should not use --prefix in default_build, use
+	  default_build_e17_module instead
+
 2007-02-16 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* CONFLICTS: removed, deprecation complete
 
