--- a/e/e_module-mixer/HISTORY
+++ b/e/e_module-mixer/HISTORY
@@ -1,3 +1,7 @@
+2008-02-27 Eric Sandall <sandalle@sourcemage.org>
+	* BUILD: E17 modules should not use --prefix in default_build, use
+	  default_build_e17_module instead
+
 2006-11-16 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Create config.rpath so ./autogen.sh stops complaining about
 	  missing this useless (for most packages) file
