--- a/e/e_module-notification/HISTORY
+++ b/e/e_module-notification/HISTORY
@@ -1,3 +1,7 @@
+2008-02-27 Eric Sandall <sandalle@sourcemage.org>
+	* BUILD: E17 modules should not use --prefix in default_build, use
+	  default_build_e17_module instead
+
 2008-02-26 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD: This module has it's own idea of how to install, unlike other
 	  modules. I've informed the E devs, but they don't seem keen on fixing it.
