--- a/e/e_module-screenshot/HISTORY
+++ b/e/e_module-screenshot/HISTORY
@@ -1,3 +1,7 @@
+2008-02-27 Eric Sandall <sandalle@sourcemage.org>
+	* BUILD: E17 modules should not use --prefix in default_build, use
+	  default_build_e17_module instead
+
 2008-01-15 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: New CVS update of screenshot now depends on emprint
 	* CONFLICTS: Removed, re-write to metapackage has been in five stable
