--- a/e/e_module-mount/HISTORY
+++ b/e/e_module-mount/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 Eric Sandall <sandalle@sourcemage.org>
+	* Deprecate as it is no longer developed nor downloadable via CVS
+
 2008-01-15 Eric Sandall <sandalle@sourcemage.org>
 	* CONFLICTS: Removed, re-write to metapackage has been in five stable
 	  releases
