sane-backends: Fixing broken install

--- a/graphics-libs/sane-backends/HISTORY
+++ b/graphics-libs/sane-backends/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 David Kowis <dkowis@shlrm.org>
+	* INSTALL: fixed broken mkdir. Needs -p!
+
 2008-02-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.0.19
 	* DEPENDS: cleaned up the spaces
