--- a/graphics-libs/sane-backends/INSTALL
+++ b/graphics-libs/sane-backends/INSTALL
@@ -1,4 +1,4 @@
-mkdir ${INSTALL_ROOT}/etc/sane.d               &&
+mkdir -p ${INSTALL_ROOT}/etc/sane.d               &&
 default_install &&
 cd $SOURCE_DIRECTORY  &&
 cp include/sane/sane{i,i_config,i_backend}.h   \
