e: created directories for coming split e16: New section for e16 unique.  (FUNCTIONS not actually applicable) e17: New section for e17 unique.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-27 Dale E. Edmons <linuxfan@sourcemage.org>
+	* e16: Created new sections for spells unique to e16.
+	* e17: Created new sections for spells unique to e17.
+	* e: Unchanged; will contain modules common to e16 & e17.
+	* Individual spells will be moved later.
+
 2008-02-28 Arjan Bouter <abouter@sourcemage.org>
 	* windowmanagers/lxp, windowmanagers/lxp-icewm: new spells,
 	  LookXP windowmanager.
