--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
 2008-02-27 Dale E. Edmons <linuxfan@sourcemage.org>
+	* e/e16: Moved to e16/e16
+	* e/e16-docs: Moved to e16/e16-docs
+	* e/e16-themes: Moved to e16/e16-themes
+	* e/e17: Moved to e17/e17
+	* e/e17genmenus: Moved to e17/e17genmenus
+
+2008-02-27 Dale E. Edmons <linuxfan@sourcemage.org>
 	* e16: Created new sections for spells unique to e16.
 	* e17: Created new sections for spells unique to e17.
 	* e: Unchanged; will contain modules common to e16 & e17.
