--- a/e16/e16-themes/HISTORY
+++ b/e16/e16-themes/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 Dale E. Edmons <linuxfan@sourcemage.org>
+	* DETAILS: Added KEYWORDS
+
 2008-01-12 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.16.8.0.2
 
