--- a/e17/e17/HISTORY
+++ b/e17/e17/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 Dale E. Edmons <linuxfan@sourcemage.org>
+	* DETAILS: Added KEYWORDS
+
 2008-02-19 Arjan Bouter <abouter@sourcemage.org>
 	* DEPENDS: moved libx* deps to ecore, where they are actually checked.
 
