--- a/e17/e17genmenu/HISTORY
+++ b/e17/e17genmenu/HISTORY
@@ -1,3 +1,6 @@
+2008-02-27 Dale E. Edmons <linuxfan@sourcemage.org>
+	* DETAILS: Added KEYWORDS
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
