--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,9 @@
+2008-02-28 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.8.6e, SECURITY_PATCH=4
+	  http://www.videolan.org/security/sa0801.php
+	  http://www.videolan.org/security/sa0802.php
+	* PRE_BUILD, ffmpeg-api.patch, old-faad2.patch: removed patches
+
 2007-10-22 Pol Vinogradov <vin.public@gmail.com>
 	* BUILD: changed iceweasel to icecat
 
