--- a/disk/hdparm/HISTORY
+++ b/disk/hdparm/HISTORY
@@ -1,3 +1,6 @@
+2008-02-28 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 8.6
+
 2008-02-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 8.5
 
