--- a/devel/nasm/HISTORY
+++ b/devel/nasm/HISTORY
@@ -1,3 +1,6 @@
+2008-02-28 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.02
+
 2008-01-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.01
 
