--- a/net/nload/HISTORY
+++ b/net/nload/HISTORY
@@ -1,3 +1,6 @@
+2008-02-28 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.7.1
+
 2008-02-03 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.7.0, fixed WEB_SITE
 
