--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-28 Treeve Jelbert <treeve@sourcemage.org>
+	* kde4-apps/kdiamond: new kde4 game
+
 2008-02-27 Dale E. Edmons <linuxfan@sourcemage.org>
 	* e/e16: Moved to e16/e16
 	* e/e16-docs: Moved to e16/e16-docs
