--- a/kde4/kdeaccessibility4/HISTORY
+++ b/kde4/kdeaccessibility4/HISTORY
@@ -1,3 +1,7 @@
+2008-02-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: added fallback KDE_VER=stable so summoning works if you don't
+	  have kdelibs4 yet (at least for the stable choice)
+
 2008-02-12  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.1
 	  add stable/unstable versions; currently(4.0.1/4.0.61)
