--- a/kde4/kdemultimedia4/HISTORY
+++ b/kde4/kdemultimedia4/HISTORY
@@ -1,3 +1,7 @@
+2008-02-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: added fallback KDE_VER=stable so summoning works if you don't
+	  have kdelibs4 yet (at least for the stable choice)
+
 2008-02-21  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.63
 
