--- a/gnome2-libs/bug-buddy2/HISTORY
+++ b/gnome2-libs/bug-buddy2/HISTORY
@@ -1,3 +1,6 @@
+2008-02-28 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.90
+
 2007-10-08 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.1
 
