e_module-bling: Fix installation using default_build_e17_module (patch submitted upstream)

--- a/e17/e_module-bling/HISTORY
+++ b/e17/e_module-bling/HISTORY
@@ -1,3 +1,8 @@
+2008-02-28 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_BUILD: Apply bling.econfig.patch
+	* bling.econfig.patch: Fix installation using default_build_e17_module
+	  Patch submitted to upstream
+
 2008-02-27 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD: E17 modules should not use --prefix in default_build, use
 	  default_build_e17_module instead
