wine: completed and added lots of optional_depends

--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,7 @@
+2008-02-29 Arjan Bouter <abouter@sourcemage.org>
+	* DEPENDS: completes --with and --without options
+	  added missing optional deps
+
 2008-02-26 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DEPENDS: changed msttf to MSTTF
 
