editors/aewan: new spell, ascii-art editor

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-01 Ismael Luceno <ismael@sourcemage.org>
+	* editors/aewan: new spell, ascii-art editor
+
 2008-02-28 Dale E. Edmons <linuxfan@sourcemage.org>
 	* e16: git mv'd to e-16
 	* e17: git mv'd to e-17
