--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-01 Treeve Jelbert <treeve@sourcemage.org>
+	* science/avogadro: new spell, chemistry molecule editor
+
 2008-03-01 Ismael Luceno <ismael@sourcemage.org>
 	* editors/aewan: new spell, ascii-art editor
 
