--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-02 Treeve Jelbert <treeve@sourcemage.org>
+	* kde4-apps/yakuake4: new spell
+
 2008-03-01 Treeve Jelbert <treeve@sourcemage.org>
 	* science/avogadro: new spell, chemistry molecule editor
 
