openldap: remove the context patch that no longer applies.

--- a/collab/openldap/HISTORY
+++ b/collab/openldap/HISTORY
@@ -1,3 +1,8 @@
+2008-03-03 Thomas Orgis <sobukus@sourcemage.org>
+	* CONFIGURE, openldap-2.3.33-contextpatch.bz2: Removed the context patch,
+	  as it doesn't apply anymore (patch author doesn't follow openldaps release
+	  schedule in production use)
+
 2008-02-25 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.4.8
 
