deprecate gnome2-apps/gnucash2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-03  Treeve Jelbert <treeve@sourcemage.org>
+	* gnome2-apps/gnucash2: spell deprecated [replaced by ]
+
 2008-03-02 Treeve Jelbert <treeve@sourcemage.org>
 	* kde4-apps/yakuake4: new spell
 
