pulseaudio: Changed optional_depends jack to JACK-DRIVER.

--- a/audio-drivers/pulseaudio/HISTORY
+++ b/audio-drivers/pulseaudio/HISTORY
@@ -1,3 +1,6 @@
+2008-03-04 Juuso Alasuutari <iuso@sourcemage.org>
+	* DEPENDS: Changed optional_depends jack to JACK-DRIVER.
+
 2008-02-19 Thomas Orgis <sobukus@orgis.org>
 	* PRE_BUILD: fix Makefile for dbus-without-hal build
 
