audacious-plugins: Changed optional_depends jack to JACK-DRIVER.

--- a/audio-plugins/audacious-plugins/HISTORY
+++ b/audio-plugins/audacious-plugins/HISTORY
@@ -1,3 +1,6 @@
+2008-03-04 Juuso Alasuutari <iuso@sourcemage.org>
+	* DEPENDS: Changed optional_depends jack to JACK-DRIVER.
+
 2008-01-19 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.4.4
 
