soundkonverter: new spell, a KDE frontend to various audio converters

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-05 Julien "_kaze_" ROZO <julien@rozo.org>
+	* kde-apps/soundkonverter: new spell, a KDE frontend to various audio
+	  converters
+
 2008-03-04 Julien "_kaze_" ROZO <julien@rozo.org>
 	* groups: added avahi (gid=162)
 	* kde-apps/knetstats: new spell, a KDE network monitor
