gphotofs: added fuse as a dependency

--- a/disk/gphotofs/HISTORY
+++ b/disk/gphotofs/HISTORY
@@ -1,3 +1,6 @@
+2008-03-05 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DEPENDS: added fuse
+
 2008-03-01 Javier Vasquez <jevv.cr@gmail.com>
 	* DEPENDS, DETAILS, HISTORY: created this spell
 
