ftp/pure-ftpd: HISTORY entry for my last commit

--- a/ftp/pure-ftpd/HISTORY
+++ b/ftp/pure-ftpd/HISTORY
@@ -1,3 +1,7 @@
+2008-03-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* init.d/pure-ftpd, init.d/smgl-pure-ftpd: renamed the init
+	  script
+
 2007-06-19 Elisamuel Resto <ryuji@mages.ath.cx>
 	* DEPENDS: added openssl for TLS/SSL support
 
