--- a/kde4/kdesdk4/HISTORY
+++ b/kde4/kdesdk4/HISTORY
@@ -1,5 +1,6 @@
 2008-03-06  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.65
+	  fix hash
 
 2008-02-29  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.64
