Changelog entries for removal of deprecated spells

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-07 Arjan Bouter <abouter@sourcemage.org>
+	* windowmanagers/kahakai,papuawm,wmi: removed deprecated spells
+
 2008-03-05 Julien "_kaze_" ROZO <julien@rozo.org>
 	* kde-apps/soundkonverter: new spell, a KDE frontend to various audio
 	  converters
