e-17/evas: e-17/e-emotion: Last of the KEYWORD changes until list is established.

--- a/e-17/e-emotion/HISTORY
+++ b/e-17/e-emotion/HISTORY
@@ -1,4 +1,7 @@
 2008-02-27 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: KEYWORDS update.
+
+2008-02-27 Arjan Bouter <abouter@sourcemage.org>
 	* DEPENDS: made xine-libs optional
 	* DETAILS: removed updated and set patchlevel=1
 
