evas: Corrected error in HISTORY.

--- a/e-17/e-emotion/HISTORY
+++ b/e-17/e-emotion/HISTORY
@@ -1,4 +1,4 @@
-2008-02-27 Arjan Bouter <abouter@sourcemage.org>
+2008-03-07 Dale E. Edmons <linuxfan@sourcemage.org>
 	* DETAILS: KEYWORDS update.
 
 2008-02-27 Arjan Bouter <abouter@sourcemage.org>
