printer/ghostscript: added make_single/make_normal to BUILD

--- a/printer/ghostscript/HISTORY
+++ b/printer/ghostscript/HISTORY
@@ -1,3 +1,6 @@
+2008-03-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD: added make_single, make_normal
+
 2008-03-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 8.62, fixed desc
 
