e_module-iiirk: E17 taskbar with system tray-like docking

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-07 Eric Sandall <sandalle@sourcemage.org>
+	* e-17/e_module-iiirki: E17 taskbar with system tray-like docking
+
 2008-03-07 Arjan Bouter <abouter@sourcemage.org>
 	* windowmanagers/kahakai,papuawm,wmi: removed deprecated spells
 
