--- a/gnome2-apps/gnumeric/HISTORY
+++ b/gnome2-apps/gnumeric/HISTORY
@@ -1,3 +1,6 @@
+2008-03-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.8.2
+
 2008-01-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.8.1
 
