ihu: new spell, a VoIP application based on QT

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-08 Julien "_kaze_" ROZO <julien@rozo.org>
+	* telephony/ihu: new spell, a VoIP application based on QT
+
 2008-03-07 Eric Sandall <sandalle@sourcemage.org>
 	* e-17/e_module-iiirki: E17 taskbar with system tray-like docking
 
