--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-08 Treeve Jelbert <treeve@sourcemage.org>
+	* kde4-apps/libksane: new spell, scanner support for kde4
+
 2008-03-08 Julien "_kaze_" ROZO <julien@rozo.org>
 	* telephony/ihu: new spell, a VoIP application based on QT
 
