net/paris-traceroute: new spell, a new version of traceroute

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-08 Ladislav Hagara <hgr@vabo.cz>
+	* net/paris-traceroute: new spell, a new version of the traceroute
+
 2008-03-08 Treeve Jelbert <treeve@sourcemage.org>
 	* kde4-apps/libksane: new spell, scanner support for kde4
 
