gnome-vfs2 - fix bug #14342

--- a/gnome2-libs/gnome-vfs2/HISTORY
+++ b/gnome2-libs/gnome-vfs2/HISTORY
@@ -1,3 +1,6 @@
+2008-03-09 Treeve Jelbert <treeve@sourcemage.org>
+	* PRE_BUILD: added, fix install without gtk-doc, bug #14342
+
 2008-02-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.21.90
 
