utils/newsyslog: new spell, a log file rotater

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* utils/newsyslog: new spell, a log file rotater
+
 2008-03-08 Ladislav Hagara <hgr@vabo.cz>
 	* net/paris-traceroute: new spell, a new version of the traceroute
 
