firebird - fix startup problem

--- a/database/firebird/HISTORY
+++ b/database/firebird/HISTORY
@@ -1,3 +1,7 @@
+2008-03-09 Treeve Jelbert <treeve@sourcemage.org>
+	* init.d/firebird2: fix for latest su
+	  move -l option to end
+
 2008-03-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.1.0.17755-ReleaseCandidate2
 	* PREPARE: version 2.1 is no longer experimental
