yaml-tiny: Added a YAML script to read/write YAML files with as little code as possible

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2008-03-09 Eric Sandall <sandalle@sourcemage.org>
 	* cluster/distriblend: Added a Distributing system for rendering 3D
 	  scenes
+	* perl-cpan/yaml-tiny: Added a YAML script to read/write YAML files
+	  with as little code as possible
 
 2008-03-08 Ladislav Hagara <hgr@vabo.cz>
 	* net/paris-traceroute: new spell, a new version of the traceroute
