gvfs: new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-09 Robin Cook <rcook@wyrms.net>
+	* New Spell: gnome2-libs/gvfs
+
 2008-03-09 Eric Sandall <sandalle@sourcemage.org>
 	* cluster/distriblend: Added a Distributing system for rendering 3D
 	  scenes
