Spell e_module-iiirk correctly

--- a/e-17/e_modules/HISTORY
+++ b/e-17/e_modules/HISTORY
@@ -1,5 +1,5 @@
 2008-03-07 Eric Sandall <sandalle@sourcemage.org>
-	* DEPENDS: Added optional dependency on e_module-iiirki
+	* DEPENDS: Added optional dependency on e_module-iiirk
 
 2008-02-26 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Added optional dependencies on e_module-itask and
