--- a/ChangeLog
+++ b/ChangeLog
@@ -18,7 +18,7 @@
 	* telephony/ihu: new spell, a VoIP application based on QT
 
 2008-03-07 Eric Sandall <sandalle@sourcemage.org>
-	* e-17/e_module-iiirki: E17 taskbar with system tray-like docking
+	* e-17/e_module-iiirk: E17 taskbar with system tray-like docking
 
 2008-03-07 Arjan Bouter <abouter@sourcemage.org>
 	* windowmanagers/kahakai,papuawm,wmi: removed deprecated spells
