net/olsrd: new spell, implementation of the OLSR protocol

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-11 Ismael Luceno <ismael@sourcemage.org>
+	* net/olsrd: new spell, implementation of the OLSR protocol
+
 2008-03-01 Ismael Luceno <ismael@sourcemage.org>
 	* editors/aewan: new spell, ascii-art editor
 
