coreutils: use persistent_add instead of export

--- a/utils/coreutils/INSTALL
+++ b/utils/coreutils/INSTALL
@@ -1,6 +1,6 @@
 # We need this directory in the path for the following utilities
 # cut, dirname, tail, and uniq
-export PATH="$SOURCE_DIRECTORY/src:$PATH"    && 
+persistent_add PATH="$SOURCE_DIRECTORY/src:$PATH"    && 
 
 #horrible hack, some of my best work ;-)
 ./src/ginstall  src/ginstall                 \
