xine-lib: use persistent_add instead of export

--- a/video-libs/xine-lib/HISTORY
+++ b/video-libs/xine-lib/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2008-02-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.1.10.1, SECURITY_PATCH=5, CVE-2008-0486
 
