mozart-base: use persistent_add instead of export

--- a/devel/mozart-base/HISTORY
+++ b/devel/mozart-base/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-03-24 Jeremy Blosser <jblosser-smgl@firinn.org>
 	* DEPENDS: Add gdbm, bug 11456.
 
