expect: use persistent_add instead of export

--- a/devel/expect/HISTORY
+++ b/devel/expect/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-03-04 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: fixed SOURCE_HASH [Bug 10714]
 
