pidgin-encryption: use persistent_add instead of export

--- a/chat-im/pidgin-encryption/HISTORY
+++ b/chat-im/pidgin-encryption/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-10-15 Lalo Martins <lalo@sourcemage.org>
 	* DETAILS, CONFIGURE: updating urls, and cvs->svn
 
