ekiga: use persistent_add instead of export

--- a/chat-im/ekiga/HISTORY
+++ b/chat-im/ekiga/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* PRE_BUILD: use persistent_add instead of export
+
 2007-12-06 Ethan "eekee" Grammatikidis <eekee57@fastmail.fm>
 	* DETAILS: long desc formatting cleaned up
 
