linux: use persistent_add instead of export

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* UPDATE_BOOTLOADER, FINAL: use persistent_add instead of export
+
 2008-02-26 Eric Sandall <sandalle@sourcemage.org>
 	* info/patches/mm_patches/2.6.25-rc2-mm1: Added
 	* info/patches/PRE_2_6/patch-2.6.25-rc2: Added (for 2.6.25-rc2-mm1)
