thunderbird: use persistent_add instead of export

--- a/mail/thunderbird/INSTALL
+++ b/mail/thunderbird/INSTALL
@@ -14,8 +14,8 @@ if [ "$BUILD_ENIGMAIL" == "y" ]; then
 fi &&
 
 cd ${INSTALL_ROOT}/usr/lib/thunderbird &&
-export LD_LIBRARY_PATH="$THUNDERBIRD_HOME" &&
-export MOZILLA_FIVE_HOME="$THUNDERBIRD_HOME" &&
+persistent_add LD_LIBRARY_PATH="$THUNDERBIRD_HOME" &&
+persistent_add MOZILLA_FIVE_HOME="$THUNDERBIRD_HOME" &&
 ./regxpcom &&
 touch `find . -name *.rdf` &&
 
