ChangeLog: added my igning key

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-11 Ladislav Hagara <hgr@vabo.cz>
+	* gurus.gpg: added my signing key
+
 2008-03-11 Ismael Luceno <ismael@sourcemage.org>
 	* net/olsrd: new spell, implementation of the OLSR protocol
 
