--- a/gnome2-libs/gvfs/HISTORY
+++ b/gnome2-libs/gvfs/HISTORY
@@ -1,2 +1,6 @@
+2008-03-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.2.0.1
+	* DEPENDS: bluez -> bluez-libs
+
 2008-03-09 Robin Cook <rcook@wyrms.net>
 	* NEW SPELL: DETAILS, DEPENDS
