--- a/gnome2-libs/gnome-vfs2/HISTORY
+++ b/gnome2-libs/gnome-vfs2/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.22.0
+
 2008-03-09 Treeve Jelbert <treeve@sourcemage.org>
 	* PRE_BUILD: added, fix install without gtk-doc, bug #14342
 
