--- a/gnome2-libs/vte/HISTORY
+++ b/gnome2-libs/vte/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.16.13
+
 2008-02-11 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_SUB_DEPENDS, SUB_DEPENDS: Allow packages to require pygtk2
 
