--- a/graphics/inkscape/HISTORY
+++ b/graphics/inkscape/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.46
+
 2007-08-19 Elisamuel Resto <ryuji@mages.ath.cx>
 	* DEPENDS: added dependency on PyXML (Bug #13291) and numPy
 
