lgui: new spell, GTK+2 binding for Lua

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-12 Vlad Glagolev <stealth@sourcemage.org>
+	* lua-forge/lgui: new spell, GTK+2 binding for Lua
+
 2008-03-11 Eric Sandall <sandalle@sourcemage.org>
 	* audio-creation/jokosher: Added a simple and powerful multi-track studio
 
