--- a/x11-toolkits/gtk+2/HISTORY
+++ b/x11-toolkits/gtk+2/HISTORY
@@ -1,3 +1,7 @@
+2008-03-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.12.9
+	  Fixed SOURCE_URL[1]
+
 2008-02-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.12.8
 
