kompozer: Added a GECKO-based web editing environment (replaces nvu)

--- a/http/nvu/HISTORY
+++ b/http/nvu/HISTORY
@@ -1,3 +1,6 @@
+2008-03-12 Eric Sandall <sandalle@sourcemage.org>
+	* Deprecate in favour of maintained kompozer (fork of defunct nvu)
+
 2008-02-11 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS, PRE_BUILD, BUILD: Create unique SOURCE_DIRECTORY
 	  Fixes Bug #7977
