--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2008-03-12 Eric Sandall <sandalle@sourcemage.org>
 	* net/shorewall.gpg.key: Move from spell-level to section level
+	* http/kompozer: Added a GECKO-based web editing environment (replaces nvu)
 
 2008-03-12 Vlad Glagolev <stealth@sourcemage.org>
 	* lua-forge/lgui: new spell, GTK+2 binding for Lua
