thunar: fixed D-Bus support

--- a/xfce/thunar/HISTORY
+++ b/xfce/thunar/HISTORY
@@ -1,3 +1,6 @@
+2008-03-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: fixed D-Bus support
+
 2007-12-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added req dep -- desktop-file-utils, cleaned up
 
