lightmediascanner: Added an optimized library for parsing and scanning directories

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 	* net/shorewall.gpg.key: Move from spell-level to section level
 	* http/kompozer: Added a GECKO-based web editing environment (replaces nvu)
 	* e-17/edje_editor: Added a simple editor for edj files
+	* libs/lightmediascanner: Added an optimized library for parsing and
+	  scanning directories
 
 2008-03-12 Vlad Glagolev <stealth@sourcemage.org>
 	* lua-forge/lgui: new spell, GTK+2 binding for Lua
