latex/ifxetex: new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* latex/ifxetex: new spell
+
 2008-03-11 Eric Sandall <sandalle@sourcemage.org>
 	* audio-creation/jokosher: Added a simple and powerful multi-track studio
 
