--- a/python-pypi/trac/HISTORY
+++ b/python-pypi/trac/HISTORY
@@ -1,3 +1,6 @@
+2008-03-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.11b2
+
 2008-02-19 Vlad Glagolev <stealth@sourcemage.org>
 	* PREPARE: removed, there's no -current svn branch atm
 	* INSTALL: there's no global config now
