lunatic-python: new spell, two-way bridge between Python and Lua

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-13 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/lunatic-python: new spell, two-way bridge between Python and Lua
+
 2008-03-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* latex/ifxetex: new spell
 
