utils/sunbird: updated to 0.7

--- a/utils/sunbird/HISTORY
+++ b/utils/sunbird/HISTORY
@@ -1,3 +1,7 @@
+2008-03-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: updated to 0.7
+	* cairo-fixes.patch: added to fix a compile error
+
 2007-08-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: corrected SOURCE_URL[0]
 
