ffmpeg-svn: configure options changed, bug 14364

--- a/video/ffmpeg-svn/HISTORY
+++ b/video/ffmpeg-svn/HISTORY
@@ -1,3 +1,8 @@
+2008-03-13 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* BUILD: --enable-pp --> --enable-postproc
+	* CONFIGURE: --{en,dis}able-swscaler --> --{en,dis}able-swscale,
+	  bug #14364
+
 2008-02-27 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* BUILD: fixed location for installed headers back to
 	  /usr/include/ffmpeg
