--- a/utils/hal-info/HISTORY
+++ b/utils/hal-info/HISTORY
@@ -1,4 +1,7 @@
-2008-02-117 Treeve Jelbert <treeve@sourcemage.org>
+2008-03-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 20080313
+
+2008-02-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 20080215
 
 2007-12-13 Treeve Jelbert <treeve@sourcemage.org>
