guru-tools: revert ++version, use patchlevel, url works, fix install

--- a/smgl/guru-tools/HISTORY
+++ b/smgl/guru-tools/HISTORY
@@ -1,5 +1,5 @@
 2008-03-14 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
-	* DETAILS: updated spell to 1.10 - added smgl-cherry-pick
+	* DETAILS: patchlevel++ - added smgl-cherry-pick
 
 2007-04-12 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: updated spell to 1.9
