Revert "stlport: use persistent_add instead of export"
This reverts commit ec762f3d6065c562c879598de74fa6f5260f4bac.

Conflicts:

	libs/stlport/HISTORY

--- a/libs/stlport/INSTALL
+++ b/libs/stlport/INSTALL
@@ -4,4 +4,4 @@ chmod -R a+r /usr/include/stlport  &&
 chown -R root:root /usr/include/stlport  &&
 (cd lib; tar cf - --exclude=CVS --exclude=.cvsignore .) | (cd /usr/lib; tar xf -)  &&
 chown -R root:root /usr/lib/libstlport*  &&
-persistent_add PATH=${PATH_HOLD}
+export  PATH=${PATH_HOLD}
