guru-tools: added missing $ in INSTALL forgot to commit this yesterday

--- a/smgl/guru-tools/HISTORY
+++ b/smgl/guru-tools/HISTORY
@@ -1,3 +1,6 @@
+2008-03-15 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* INSTALL: added missing $
+
 2008-03-14 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: patchlevel++ - added smgl-cherry-pick
 
