wpa_supplicant: Updated stable to 0.5.10

--- a/net/wpa_supplicant/HISTORY
+++ b/net/wpa_supplicant/HISTORY
@@ -1,3 +1,6 @@
+2008-03-15 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated stable to 0.5.10
+
 2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* PRE_BUILD: removed is_depends_enabled.function reference
 
@@ -106,3 +109,4 @@
 
 2005-06-20 David Brown <dmlb2000@excite.com>
 	* ALL: created spell
+
