wpa_supplicant: Updated old to 0.4.11

--- a/net/wpa_supplicant/HISTORY
+++ b/net/wpa_supplicant/HISTORY
@@ -1,5 +1,6 @@
 2008-03-15 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated stable to 0.5.10
+	  Updated old to 0.4.11
 
 2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* PRE_BUILD: removed is_depends_enabled.function reference
