libgig: Replaced deprecated MAKE_NJOBS=1 with make_single, make_normal.

--- a/audio-libs/libgig/HISTORY
+++ b/audio-libs/libgig/HISTORY
@@ -1,4 +1,8 @@
 2008-03-16 Juuso Alasuutari <iuso@sourcemage.org>
+	* DETAILS, BUILD: Replaced deprecated MAKE_NJOBS=1
+	  with make_single, make_normal.
+
+2008-03-16 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Updated to 3.2.1, added MAKE_NJOBS=1 to fix build.
 	* INSTALL: Added, install API docs.
 
