libxmu: Auto-conflicts with all prior monolithic X providers

--- a/xorg-lib/libxmu/HISTORY
+++ b/xorg-lib/libxmu/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Auto-conflicts with all prior monolithic X providers
+
 2006-11-14 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.0.3
 
@@ -46,4 +49,5 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
 
