ffmpeg-svn: configure options changed, bug 14364
(cherry-picked from commit 593210ce88dc6707bc507b5d82cba9752b4b363b)

--- a/video/ffmpeg-svn/HISTORY
+++ b/video/ffmpeg-svn/HISTORY
@@ -1,3 +1,8 @@
+2008-03-13 Arwed von Merkatz <v.merkatz@gmx.net>
+	* BUILD: --enable-pp --> --enable-postproc
+	* CONFIGURE: --{en,dis}able-swscaler --> --{en,dis}able-swscale,
+	  bug #14364
+
 2007-11-19 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* PREPARE, DETAILS: removed amr-nb-fixed, not supported anymore
 	* BUILD, DETAILS, PREPARE, PRE_BUILD: commented out the whole amr
