xorg-profile: Actually rename SPELL to xorg-profile

--- a/x11-libs/xorg-profile/HISTORY
+++ b/x11-libs/xorg-profile/HISTORY
@@ -1,4 +1,5 @@
 2008-03-17 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Actually rename SPELL to xorg-profile
 	* DEPENDS: Don't depend on deprecated xf86-video-i810
 	* UP_TRIGGERS: Fix missing 'do' after for
 
