xorg-profile: Don't depend on any fonts, xorg-server does that for us

--- a/x11-libs/xorg-profile/HISTORY
+++ b/x11-libs/xorg-profile/HISTORY
@@ -1,6 +1,7 @@
 2008-03-17 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Actually rename SPELL to xorg-profile
 	* DEPENDS: Don't depend on deprecated xf86-video-i810
+	  Don't depend on any fonts, xorg-server does that for us
 	* UP_TRIGGERS: Fix missing 'do' after for
 	  provider x11_libs_provider are variables, not commands
 	  Not sure what I was thinking...the providers will be gone for this
