mesademos: X11-UTILS to the one and only xorg-utils

--- a/graphics/mesademos/HISTORY
+++ b/graphics/mesademos/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-UTILS to the one and only xorg-utils
+
 2007-08-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 7.0.1
 
