wmii: X11-LIBS to the one and only xorg-libs

--- a/windowmanagers/wmii/HISTORY
+++ b/windowmanagers/wmii/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-05-30 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: snapshot bumped to 20070516
 	  DEPENDS: removed libixp as it is included in the snapshot
