New spell, a C++ utility library aimed at audio applications.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2008-03-17 Juuso Alasuutari <iuso@sourcemage.org>
 	* dave_robillard.gpg: Added Dave Robillar's GPG key, needed by
 	  spells in more than one section.
+	* audio-libs/raul: New spell, a C++ utility library aimed at
+	  audio applications.
 
 2008-03-17 Ethan Grammatikidis <eekee57@fastmail.fm>
 	* python-pypi/boodler: new spell, a tool for creating
